Sqlite Data Access

--- a/CarStatAppLibrary/CarStatAppLibrary.csproj
+++ b/CarStatAppLibrary/CarStatAppLibrary.csproj
@@ -7,7 +7,8 @@
   </PropertyGroup>
 
   <ItemGroup>
-    <Folder Include="DataAccess\" />
+    <PackageReference Include="Dapper" Version="2.0.123" />
+    <PackageReference Include="System.Data.SQLite" Version="1.0.115.5" />
   </ItemGroup>
 
 </Project>
