--- a/CarStatApp/CarStatAppUI.csproj
+++ b/CarStatApp/CarStatAppUI.csproj
@@ -15,6 +15,8 @@
 
   <ItemGroup>
     <PackageReference Include="Microsoft.VisualStudio.Utilities" Version="17.1.32210.191" />
+    <PackageReference Include="System.Configuration.ConfigurationManager" Version="6.0.0" />
+    <PackageReference Include="System.Data.SQLite.Core" Version="1.0.115.5" />
   </ItemGroup>
 
   <ItemGroup>
