--- a/CarStatAppxUnit/CarStatAppxUnit.csproj
+++ b/CarStatAppxUnit/CarStatAppxUnit.csproj
@@ -20,4 +20,8 @@
     </PackageReference>
   </ItemGroup>
 
+  <ItemGroup>
+    <ProjectReference Include="..\CarStatAppLibrary\CarStatAppLibrary.csproj" />
+  </ItemGroup>
+
 </Project>
